# MiniTreeMaker

./: CMakeLists.txt  README.md
CMake/: FindROOT.cmake
MyAnalysis/: AnalysisTool.cxx  CMakeLists.txt  Dict.cc  GetJSON.cxx  MyAnalysis.cxx  jsoncpp.cpp  main.cxx
data/: json.sh
include/: Dict.h  LinkDef.h  MyAnalysis.h  Pax.h  Pax_cc.d
jobs/: mkjob.sh  mv.sh
